2003-11-01  Heikki Junes  <hjunes@cc.hut.fi>

	* input/bugs/rhytmicstaff-tie.ly: add file.

	* THANKS: Create skeleton for 2.1.

2003-10-31  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/bar-lines.ly (TODO): dashed "|".

2003-10-30  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/refman.itely, input/regression/tie-accidental.ly,
	input/regression/tie-chord.ly: Fix spell for tying.

	* input/test/ly2dvi-testpage.ly: removed (renamed, see below).

	* input/test/lilypond-testpage.ly, Documentation/user/invoking.itexi:
	new file (renamed, see above).

	* Documentation/user/lilypond-book.itely
	* buildscripts/lilypond-login.sh elisp/lilypond-mode.el
	* input/example-1.ly input/example-2.ly input/example-3.ly
	* input/les-nereides.ly input/test/fill-a4.ly input/test/spacing-2.ly
	* input/test/title.ly po/cs.po po/da.po po/de.po po/es.po po/fi.po
	* po/fr.po po/it.po po/ja.po po/lilypond.pot po/nl.po po/ru.po
	* po/sv.po scm/output-pdftex.scm scm/output-tex.scm
	* scripts/lilypond-book.py scripts/lilypond.py
	* stepmake/bin/package-zip32.sh tex/lilyponddefs.tex tex/titledefs.tex
	* vimrc: replace ly2dvi with lilypond and remove silly comments.

	* Documentation/user/lilypond.tely: update version.

	* Documentation/user/{appendices,introduction,refman,tutorial}.itely:
	Remove extra spaces in each @node, fixes spaces.

2003-10-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (output_dict): Add definition of
	\lilypondbook also for LaTeX output. Solves several bug reports.

2003-10-29  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/follow-thread.ly, input/test/polymetric.ly: Fix typos.

2003-10-24  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/transposition.ly: Fix key signatures, given in comments.

2003-10-23  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/midi.scm (instrument-names-alist),
	Documentation/user/appendices.itely: Correct spelling of shakuhachi

2003-10-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>
