@@ -1,3 +1,8 @@
+2003-11-03  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* lily/midi-item.cc lily/include/midi-item.hh (get_fine_tuning):
+	new function, warn how many cents are missing in fine tuning.
+
 2003-11-01  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* input/bugs/rhytmicstaff-tie.ly: add file.
